PP-272: PP-272: made frontpage calendar items links, fixed policymaker members list visibility and changed policymaker listing

--- a/public/themes/custom/helfi_paatokset/src/scss/components/block/_frontpage_calendar.scss
+++ b/public/themes/custom/helfi_paatokset/src/scss/components/block/_frontpage_calendar.scss
@@ -69,6 +69,13 @@
   width: 100%;
   min-height: 282px;
   padding: $spacing-2-xs $spacing-s;
+  text-decoration: none;
+
+  &:hover {
+    .motions-link {
+      text-decoration: underline;
+    }
+  }
 
   @include breakpoint($breakpoint-s) {
     padding: $spacing-xs;
